# Visao-Computacional-O-Guia-Completo

./: .gitignore  README.md  main.py  pyproject.toml
0.1-Deteccao-de-faces/: camera.py  deteccao_face.ipynb  deteccao_face_hog_dlib.ipynb  exercicio.ipynb  exercicio2.ipynb
