[project]
name = "visao-computacional-o-guia-completo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib>=20.0.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
]
